[project]
name = "sayhello"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zero", email = "yanlei921@live.com"},
]
dependencies = [
    "blinker==1.7.0",
    "Bootstrap-Flask==2.3.3",
    "click==8.1.7",
    "Flask==3.0.2",
    "Flask-Moment==1.0.5",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.1",
    "greenlet==3.0.3",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.3",
    "MarkupSafe==2.1.5",
    "packaging==23.2",
    "python-dotenv==1.0.1",
    "SQLAlchemy==2.0.27",
    "typing-extensions==4.9.0",
    "Werkzeug==3.0.1",
    "WTForms==3.1.2",
    "gunicorn>=21.2.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "faker>=23.2.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
gstart = "gunicorn --workers=2 --bind=127.0.0.1:5000 wsgi:app"
